Fixed video upload header, fixed css conflicts, passed global state to childs, remove scrollbar on webkit based browsers, added some assets (move to cdn later)

--- a/src/styles/mobile-feed.scss
+++ b/src/styles/mobile-feed.scss
@@ -10,8 +10,22 @@
     box-sizing: border-box;
     margin:0;
     padding:0;
-    color:#fff;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Inter', sans-serif;
+}
+
+.feed-mobile{
+    *{
+        color:#fff;
+    }
+
+
+    svg path{
+        stroke-width: 1;
+    }
+
+    video {
+        pointer-events: none;
+    }
 }
 
 html, body{
@@ -25,13 +39,6 @@ html{
     scroll-snap-type: y mandatory
 }
 
-svg path{
-    stroke-width: 1;
-}
-
-video {
-    pointer-events: none;
-}
 
 .feed{
     overflow-y: scroll;
@@ -39,6 +46,18 @@ video {
     scroll-snap-type: y mandatory;
     -webkit-overflow-scrolling: touch;
     max-height: 100vh;
+}
+
+.feed::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 0;
+    height: 0;
+}
+
+*::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 0;
+    height: 0;
 }
 
 .feed_video-container{
@@ -110,10 +129,17 @@ div.feed_video-container:last-of-type {
     justify-content: center;
     align-items: center;
     padding:1px;
-}
 
-.video__post-information__interaction-button-follow__plus svg path {
-    stroke-width: 3;
+    svg {
+        height: 100%;
+
+        path {
+            stroke-width: 3;
+
+        }
+
+    }
+
 }
 
 .video__post-information__interaction-button-follow > img {
@@ -183,6 +209,16 @@ div.feed_video-container:last-of-type {
     width: 100vw;
     bottom: 0;
     z-index: 2;
+
+    svg {
+
+        height:100%;
+
+        path {
+            stroke: #ffffff;
+        }
+    }
+
 }
 
 .information-dialog-model {
@@ -246,6 +282,7 @@ div.feed_video-container:last-of-type {
     position: absolute;
     top:0;
     right:0;
+    color: #fff;
     height:3rem;
     width: 3rem;
     border-radius: 100%;
